Added GIthub URL

--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
 </div>
 
 </div>
+<p class="sign-off"><a href="https://github.com/Hope-2023/weather-app">Open source code</a>, by Hope A</p>
     </div>
     <script src="src/index.js"></script>
   </body>
