--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </form>
 <br />
 <br />
-<h1 id="city-name">London</h1>
+<h1 id="city-name"></h1>
 <!-- <h6>CURRENT WEATHER</h6> -->
 <h7 id="current-date"></h7>
 <h6 id="current-time"></h6>
@@ -60,7 +60,7 @@
           <span class="weather-icon">
           <i class="fa-solid fa-cloud fa-beat" style="color: #f2f2f2;"></i>
           </span>
-           <span class="temperature" id="temperature">15</span>
+           <span class="temperature" id="temperature"></span>
         </span>
     </h2>
     <span class="unit">
