Added Celsius and Fahrenheit link & updated weather description positioning

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </form>
 <br />
 <br />
-<h1 id="city-name">London</h1>
+<h1 id="city-name"></h1>
 <!-- <h6>CURRENT WEATHER</h6> -->
 <h7 id="current-date"></h7>
 <h6 id="current-time"></h6>
@@ -63,11 +63,11 @@
           <i class="fa-solid fa-cloud fa-beat" style="color: #f2f2f2;"></i>
           </span> -->
         </span>
-           <span class="temperature" id="temperature">7</span>
+           <span class="temperature" id="temperature"></span>
 
            <span class="unit">
-              <a href="#" id="celsius">°C</a> |
-              <a href="#" id="fahrenheit">°F</a></span>
+             <a href="#" class="active" id="celsius">°C </a>|
+             <a href="#" id="fahrenheit" class="">°F</a></span>
               <span class="current-weather-description" id="weather-description">
                   Cloudy
               </span>
