--- a/index.html
+++ b/index.html
@@ -57,20 +57,20 @@
 <div class="card current-weather">
     
         
-          <span class="weather-icon">
+          <div class="weather-icon">
             <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="" id="icon" />
           <!-- <span class="weather-icon" id="icon">
           <i class="fa-solid fa-cloud fa-beat" style="color: #f2f2f2;"></i>
           </span> -->
-        </span>
-           <span class="temperature" id="temperature"></span>
+        </div>
+           <div class="temperature" id="temperature"></div>
 
-           <span class="unit">
+           <div class="unit">
              <a href="#" class="active" id="celsius">°C </a>|
-             <a href="#" id="fahrenheit" class="">°F</a></span>
-              <span class="current-weather-description" id="weather-description">
+             <a href="#" id="fahrenheit" class="">°F</a></div>
+              <div class="current-weather-description" id="weather-description">
                   Cloudy
-              </span>
+              </div>
         </div>
 
 <div class="row weather-predictions">
