Implemented weather forecast HTML into JS & created a new function

--- a/index.html
+++ b/index.html
@@ -78,72 +78,12 @@
         <p id="current-humidity">💧 Humidity: 77%</p>
         <p id="current-wind" >💨 Wind Speed: 8 km/h</p>
         </div>
+        <div class="weather-forecast" id="week-forecast"></div>
 
-<div class="row weather-forecast">
-      <div class="col-2">
-        <div class="weather-forecast-date">SUN</div>
-        <img src="http://openweathermap.org/img/wn/01d@2x.png" alt="">
-        <div class="weather-forecast-temp">
-          <span class="highest-temp">18°</span>
-          <br />
-          <span class="lowest-temp">9°</span>
-        </div>
-      </div>
- 
-      <div class="col-2">
-        <div class="weather-forecast-date">MON</div>
-        <img src="http://openweathermap.org/img/wn/09d@2x.png" alt="">
-        <div class="weather-forecast-temp">
-          <span class="highest-temp">12°</span>
-          <br />
-          <span class="lowest-temp">6°</span>
-        </div>
-      </div>
-  
-      <div class="col-2">
-        <div class="weather-forecast-date">TUE</div>
-        <img src="http://openweathermap.org/img/wn/02d@2x.png" alt="">
-        <div class="weather-forecast-temp">
-          <span class="highest-temp">15°</span>
-          <br />
-          <span class="lowest-temp">7°</span>
-        </div>
-      </div>
-  
-      <div class="col-2">
-        <div class="weather-forecast-date">WED</div>
-        <img src="http://openweathermap.org/img/wn/04d@2x.png" alt="">
-        <div class="weather-forecast-temp">
-          <span class="highest-temp">11°</span>
-          <br />
-          <span class="lowest-temp">5°</span>
-        </div>
-      </div>
-  
-      <div class="col-2">
-        <div class="weather-forecast-date">THU</div>
-        <img src="http://openweathermap.org/img/wn/03d@2x.png" alt="">
-        <div class="weather-forecast-temp">
-          <span class="highest-temp">18°</span>
-          <br />
-          <span class="lowest-temp">9°</span>
-        </div>
-      </div>
-  
-      <div class="col-2">
-        <div class="weather-forecast-date">FRI</div>
-        <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
-        <div class="weather-forecast-temp">
-          <span class="highest-temp">14°</span>
-          <br />
-          <span class="lowest-temp">6°</span>
-        </div>
-      </div>
-  </div>
 </div>
 
 </div>
-<p class="sign-off"><a href="https://github.com/Hope-2023/weather-app">Open source code</a>, by Hope A</p>
+<p class="sign-off"><a href="https://github.com/Hope-coding/weather-app">Open source code</a>, by Hope A</p>
     </div>
     <script src="src/index.js"></script>
   </body>
