Disabled Fahrenheit conversion

--- a/index.html
+++ b/index.html
@@ -65,18 +65,17 @@
         </div>
            <div class="temperature" id="temperature"></div>
 
-           <div class="unit">
-             <a href="#" class="active" id="celsius">°C </a>|
-             <a href="#" id="fahrenheit" class="">°F</a></div>
-              <div class="current-weather-description" id="weather-description">
-                  Cloudy
-              </div>
+           <div class="unit" id="celsius">°C 
+             <!-- <a href="#" class="active" id="celsius">°C </a>| -->
+             <!-- <a href="#" id="fahrenheit" class="">°F</a> -->
+            </div>
+              <div class="current-weather-description" id="weather-description"></div>
         </div>
 
 <div class="row weather-predictions">
-        <p id="current-feel">🌡️Feels like: 10°C</p>
-        <p id="current-humidity">💧 Humidity: 77%</p>
-        <p id="current-wind" >💨 Wind Speed: 8 km/h</p>
+        <p id="current-feel"></p>
+        <p id="current-humidity"></p>
+        <p id="current-wind" ></p>
         </div>
         <div class="weather-forecast" id="week-forecast"></div>
 
