Revert "Merge branch 'main' of https://github.com/Hope-coding/weather-app"
This reverts commit ab3ac8800f5c8ffb59a927feac4ce7adaad396eb, reversing
changes made to 2d9e4fa0a9183668a97eb44c6893309b98e71275.

--- a/index.html
+++ b/index.html
@@ -65,17 +65,18 @@
         </div>
            <div class="temperature" id="temperature"></div>
 
-           <div class="unit" id="celsius">°C 
-             <!-- <a href="#" class="active" id="celsius">°C </a>| -->
-             <!-- <a href="#" id="fahrenheit" class="">°F</a> -->
-            </div>
-              <div class="current-weather-description" id="weather-description"></div>
+           <div class="unit">
+             <a href="#" class="active" id="celsius">°C </a>|
+             <a href="#" id="fahrenheit" class="">°F</a></div>
+              <div class="current-weather-description" id="weather-description">
+                  Cloudy
+              </div>
         </div>
 
 <div class="row weather-predictions">
-        <p id="current-feel"></p>
-        <p id="current-humidity"></p>
-        <p id="current-wind" ></p>
+        <p id="current-feel">🌡️Feels like: 10°C</p>
+        <p id="current-humidity">💧 Humidity: 77%</p>
+        <p id="current-wind" >💨 Wind Speed: 8 km/h</p>
         </div>
         <div class="weather-forecast" id="week-forecast"></div>
 
